// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionEditor should render 1`] = `
<SectionEditor__SectionCanvas
  data-test="section-editor"
  id={null}
>
  <DeleteConfirmDialog
    alertText="All questions in this section will also be removed. This may affect piping and routing rules elsewhere."
    data-test="dialog-delete-confirm"
    icon="icon-dialog-section.svg"
    isOpen={false}
    onClose={[MockFunction]}
    onDelete={[MockFunction]}
  />
  <MoveSectionQuery
    questionnaireId="1"
  >
    <Component />
  </MoveSectionQuery>
  <SectionEditor__Padding>
    <RichTextEditor
      autoFocus={false}
      controls={
        Object {
          "emphasis": true,
        }
      }
      id="section-title"
      label="Title"
      multiline={false}
      name="title"
      onUpdate={[Function]}
      placeholder=""
      size="large"
      testSelector="txt-section-title"
      value="Section 1"
    />
  </SectionEditor__Padding>
  <Apollo(UnwrappedSectionIntroduction)
    sectionId="section-1"
  />
</SectionEditor__SectionCanvas>
`;

exports[`SectionEditor should render 2`] = `
<SectionEditor__SectionCanvas
  data-test="section-editor"
  id={null}
>
  <DeleteConfirmDialog
    alertText="All questions in this section will also be removed. This may affect piping and routing rules elsewhere."
    data-test="dialog-delete-confirm"
    icon="icon-dialog-section.svg"
    isOpen={false}
    onClose={[MockFunction]}
    onDelete={[MockFunction]}
  />
  <MoveSectionQuery
    questionnaireId="1"
  >
    <Component />
  </MoveSectionQuery>
  <SectionEditor__Padding>
    <RichTextEditor
      autoFocus={false}
      controls={
        Object {
          "emphasis": true,
        }
      }
      id="section-title"
      label="Title"
      multiline={false}
      name="title"
      onUpdate={[Function]}
      placeholder=""
      size="large"
      testSelector="txt-section-title"
      value="Section 2"
    />
  </SectionEditor__Padding>
  <Apollo(UnwrappedSectionIntroduction)
    sectionId="section-2"
  />
</SectionEditor__SectionCanvas>
`;
